--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -40,7 +40,8 @@
     <string name="msg_sure">آبااطمینان دارید؟</string>
     <string name="msg_done">انحام شد</string>
     <string name="msg_reboot">لازم است دستگاه خاموش و روشن گردد</string>
-    <string name="msg_random">رندم سازی</string>
+    <string name="msg_random_now">رندم سازی</string>
+    <string name="msg_random_access">Randomize on access</string>
     <string name="msg_random_boot">رندم سازی پس از روشن شدن مجدد</string>
     <string name="msg_first"><b>نرم افزار ایکس پرایوسی با دقت بالایی تولید و تست شده است، با این وجود تضمینی برای عملکرد صحیح
 این نرم افزار بر روی تمامی دستگاه ها و در مورد تمامی نرم افزارها وجود ندارد.
@@ -94,6 +95,9 @@
     <string name="settings_operator">اپراتور</string>
     <string name="settings_subscriber">شناسه مشترک</string>
     <string name="settings_ua">User agent</string>
+    <string name="settings_general">GENERAL</string>
+    <string name="settings_fake_data">FAKE DATA</string>
+    <string name="settings_global">Use global settings</string>
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_extra">Extra usage data (requires restart)</string>
