--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -38,7 +38,8 @@
     <string name="msg_sure">Да ли сте сигурни?</string>
     <string name="msg_done">Готово</string>
     <string name="msg_reboot">Потребан ребут</string>
-    <string name="msg_random">Randomize</string>
+    <string name="msg_random_now">Randomize</string>
+    <string name="msg_random_access">Randomize on access</string>
     <string name="msg_random_boot">Randomize after boot</string>
     <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
 however it is impossible to guarantee it will work flawless on each and every device and for each and every application.
@@ -92,6 +93,9 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Претплатнички ИД</string>
     <string name="settings_ua">User agent</string>
+    <string name="settings_general">GENERAL</string>
+    <string name="settings_fake_data">FAKE DATA</string>
+    <string name="settings_global">Use global settings</string>
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_extra">Extra usage data (requires restart)</string>
