--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -95,7 +95,7 @@ sin embargo es imposible garantizar que funcione impecable en todos y cada uno d
     <string name="settings_ua">Agente de usuario</string>
     <string name="settings_general">GENERAL</string>
     <string name="settings_fake_data">FAKE DATA</string>
-    <string name="settings_global">Use global settings</string>
+    <string name="settings_global">Use global fake data</string>
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_extra">Extra usage data (requires restart)</string>
