--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -95,7 +95,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="settings_ua">Vartotojo agentas</string>
     <string name="settings_general">GENERAL</string>
     <string name="settings_fake_data">FAKE DATA</string>
-    <string name="settings_global">Use global settings</string>
+    <string name="settings_global">Use global fake data</string>
     <string name="settings_notify">Atnaujinimų Pranesimas</string>
     <string name="settings_usage">Android naudojimo duomenys (reikia paleisti iš naujo)</string>
     <string name="settings_extra">Extra usage data (requires restart)</string>
