--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -95,7 +95,7 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="settings_ua">User agent</string>
     <string name="settings_general">GENERAL</string>
     <string name="settings_fake_data">FAKE DATA</string>
-    <string name="settings_global">Use global settings</string>
+    <string name="settings_global">Use global fake data</string>
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
     <string name="settings_extra">Extra usage data (requires restart)</string>
