--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -94,7 +94,7 @@
     <string name="settings_ua">Nhận dạng trình duyệt</string>
     <string name="settings_general">GENERAL</string>
     <string name="settings_fake_data">FAKE DATA</string>
-    <string name="settings_global">Use global settings</string>
+    <string name="settings_global">Use global fake data</string>
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Mức sử dụng hệ thống (yêu cầu khởi động lại)</string>
     <string name="settings_extra">Extra usage data (requires restart)</string>
