--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -95,7 +95,7 @@
     <string name="settings_ua">User Agent</string>
     <string name="settings_general">GENERAL</string>
     <string name="settings_fake_data">FAKE DATA</string>
-    <string name="settings_global">Use global settings</string>
+    <string name="settings_global">Use global fake data</string>
     <string name="settings_notify">通知栏提示</string>
     <string name="settings_usage">Android 应用用量统计数据（需要重启）</string>
     <string name="settings_extra">Extra usage data (requires restart)</string>
