--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -64,7 +64,10 @@
     <string name="restrict_system">Hệ thống (các ứng dụng)</string>
     <string name="restrict_view">Mở trình duyệt</string>
     <string name="title_category">Danh mục:</string>
+    <string name="title_categories">Categories</string>
     <string name="title_restrict">Đánh dấu để hạn chế:</string>
+    <string name="title_filters">Filters</string>
+    <string name="title_batch_mode_off">Batch mode: off</string>
     <string name="title_nofilter">Không lọc</string>
 
     <plurals name="title_filters">
