--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -67,7 +67,10 @@
     <string name="restrict_system">سیستم (نرم افزارهای نصب شده)</string>
     <string name="restrict_view">نما (مرورگر)</string>
     <string name="title_category">نوع:</string>
+    <string name="title_categories">Categories</string>
     <string name="title_restrict">برای محدود شدن انتخاب کنید:</string>
+    <string name="title_filters">Filters</string>
+    <string name="title_batch_mode_off">Batch mode: off</string>
     <string name="title_nofilter">فیلتر فعالی وجود ندارد</string>
 
     <plurals name="title_filters">
