--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -65,7 +65,10 @@ Det är emellertid omöjligt att garantera att appen fungerar på alla enheter o
     <string name="restrict_system">System (installerade appar)</string>
     <string name="restrict_view">View (webbläsare)</string>
     <string name="title_category">Kategori:</string>
+    <string name="title_categories">Categories</string>
     <string name="title_restrict">Markera för att blockera:</string>
+    <string name="title_filters">Filters</string>
+    <string name="title_batch_mode_off">Batch mode: off</string>
     <string name="title_nofilter">Inga aktiva filter</string>
 
     <plurals name="title_filters">
