--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -96,8 +96,8 @@
     <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Αναγνωριστικό συνδρομητή</string>
     <string name="settings_ua">User agent</string>
-    <string name="settings_general">GENERAL</string>
-    <string name="settings_fake_data">FAKE DATA</string>
+    <string name="settings_general">General</string>
+    <string name="settings_fake_data">Fake data</string>
     <string name="settings_global">Use global fake data</string>
     <string name="settings_notify">Update notifications</string>
     <string name="settings_usage">Android usage data (requires restart)</string>
