--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -96,8 +96,8 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="settings_operator">Opérateur</string>
     <string name="settings_subscriber">ID Abonné</string>
     <string name="settings_ua">User agent</string>
-    <string name="settings_general">GÉNÉRAL</string>
-    <string name="settings_fake_data">FAUSSES DONNÉES</string>
+    <string name="settings_general">Général</string>
+    <string name="settings_fake_data">Fausses données</string>
     <string name="settings_global">Utiliser les valeurs globales</string>
     <string name="settings_notify">Notifications de MàJ</string>
     <string name="settings_usage">Activer usage log (redémarrage nécessaire)</string>
